--- a/MasterPages/MasterPages.csproj
+++ b/MasterPages/MasterPages.csproj
@@ -180,6 +180,7 @@
     <Content Include="Home.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Map.aspx" />
+    <Content Include="PhotoGallery.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MasterPage.master.cs">
@@ -205,6 +206,12 @@
     </Compile>
     <Compile Include="Map.aspx.designer.cs">
       <DependentUpon>Map.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PhotoGallery.aspx.cs">
+      <DependentUpon>PhotoGallery.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PhotoGallery.aspx.designer.cs">
+      <DependentUpon>PhotoGallery.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
