--- a/MasterPages/MasterPages.csproj
+++ b/MasterPages/MasterPages.csproj
@@ -181,6 +181,8 @@
     <Content Include="Contact.aspx" />
     <Content Include="Map.aspx" />
     <Content Include="PhotoGallery.aspx" />
+    <Content Include="TreeView.aspx" />
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MasterPage.master.cs">
@@ -212,6 +214,12 @@
     </Compile>
     <Compile Include="PhotoGallery.aspx.designer.cs">
       <DependentUpon>PhotoGallery.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TreeView.aspx.cs">
+      <DependentUpon>TreeView.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TreeView.aspx.designer.cs">
+      <DependentUpon>TreeView.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
